# huffman-coding-algorithm

./: CMakeLists.txt  README.md
include/: buffers.h  codebook.h  decoder.h  encoder.h  freqbook.h  heap.h  node.h
src/: codebook.c  decoder.c  encoder.c  freqbook.c  heap.c  main.c  node.c
test/: codebook_test.c  freqbook_test.c  heap_test.c  node_test.c  test.h
